* Added portuguese translation for all basic extensions and core (provided by the community member Max N Kanadani)

--- a/core/locale/static_country.xml
+++ b/core/locale/static_country.xml
@@ -480,4 +480,6 @@
 		<label index="SCG">Serbien und Montenegro</label>
 		<label index="HMD">Heard und McDonaldinseln</label>
 	</labels>
+	<labels lang="de"></labels>
+	<labels lang="pt"></labels>
 </locallang>
