--- a/core/locale/static_country_zone.xml
+++ b/core/locale/static_country_zone.xml
@@ -484,4 +484,5 @@
 		<label index="BRA.TO.localname">Tocantins</label>
 	</labels>
 	<labels lang="de"></labels>
+	<labels lang="pt"></labels>
 </locallang>
