--- a/core/locale/static_currency.xml
+++ b/core/locale/static_currency.xml
@@ -329,4 +329,5 @@
 		<label index="TRY.subname">new kuruş</label>
 	</labels>
 	<labels lang="de"></labels>
+	<labels lang="pt"></labels>
 </locallang>
