--- a/core/locale/static_territory.xml
+++ b/core/locale/static_territory.xml
@@ -60,4 +60,5 @@
 		<label index="num57.name">Mikronesien</label>
 		<label index="num61.name">Polynesien</label>
 	</labels>
+	<labels lang="pt"></labels>
 </locallang>
