--- a/core/locale/file.xml
+++ b/core/locale/file.xml
@@ -20,4 +20,14 @@
 		<label index="filename">Dateiname</label>
 		<label index="filesize">Dateigrösse</label>
 	</labels>
+	<labels lang="pt">
+		<label index="download">Download</label>
+		<label index="upload">Upload</label>
+		<label index="size.gb">GB</label>
+		<label index="size.mb">MB</label>
+		<label index="size.kb">KB</label>
+		<label index="size.b">B</label>
+		<label index="filename">File Name</label>
+		<label index="filesize">File Size</label>
+	</labels>
 </locallang>
