* fixed incoherent installer wordings

--- a/install/locale/installer.xml
+++ b/install/locale/installer.xml
@@ -6,7 +6,7 @@
 		<label index="type.update">todoyu Update</label>
 		<label index="install.eula">End Eser License Agreement for todoyu</label>
 		<label index="install.lgpl">The Following Third Party Libraries are Licensed Under LGPL v2.1</label>
-		<label index="install.title">todoyu Installer</label>
+		<label index="install.title">License Agreement</label>
 		<label index="install.button">I Accept, Install todoyu</label>
 		<label index="install.text">Welcome to the todoyu Tnstaller!</label>
 		<label index="install.step">todoyu Licence</label>
@@ -20,7 +20,7 @@
 		<label index="servercheck.notWritable">NOT WRITABLE</label>
 		<label index="servercheck.ready">Server is Ready for todoyu 2.0</label>
 		<label index="servercheck.notReady">Server is NOT Ready for todoyu 2.0</label>
-		<label index="servercheck.step">Check Server</label>
+		<label index="servercheck.step">Server Check</label>
 		<label index="dbconnection.title">Setup Database Server Connection</label>
 		<label index="dbconnection.button">Update Database Configuration</label>
 		<label index="dbconnection.server">Server</label>
@@ -40,13 +40,13 @@
 		<label index="dbselect.dbNotEmpty">Not Empty</label>
 		<label index="dbselect.tables">tables</label>
 		<label index="dbselect.step">Select Database</label>
-		<label index="importtables.title">Import Tables and Data</label>
-		<label index="importtables.button">Import Tables and Data</label>
+		<label index="importtables.title">Import Databe Tables</label>
+		<label index="importtables.button">Import Database Tables</label>
 		<label index="importtables.coretables">TODOYU CORE DATABASE TABLES</label>
 		<label index="importtables.exttables">TODOYU EXTENSIONS DATABASE TABLES</label>
 		<label index="importtables.text">Import Basic todoyu Tables</label>
 		<label index="importtables.step">Import Database Tables</label>
-		<label index="systemconfig.title">todoyu System Settings</label>
+		<label index="systemconfig.title">System Configuration</label>
 		<label index="systemconfig.button">Save System Configuration</label>
 		<label index="systemconfig.name">System Name</label>
 		<label index="systemconfig.email">System Email</label>
@@ -54,9 +54,9 @@
 		<label index="systemconfig.locale">Locale</label>
 		<label index="systemconfig.text">Select Your todoyu System Settings</label>
 		<label index="systemconfig.text.error">Please Enter a System Name and Email</label>
-		<label index="systemconfig.step">Configure System</label>
-		<label index="adminpassword.title">Change Admin Password</label>
-		<label index="adminpassword.button">Change Admin Password</label>
+		<label index="systemconfig.step">System Configuration</label>
+		<label index="adminpassword.title">Set Admin Password</label>
+		<label index="adminpassword.button">Set Admin Password</label>
 		<label index="adminpassword.username">Username</label>
 		<label index="adminpassword.password">Password</label>
 		<label index="adminpassword.repeatPassword">Repeat Password</label>
@@ -69,8 +69,8 @@
 		<label index="demodata.text">You can import the demo data to start testing right after you logged in. Without the demo data, you have a clean installation which you can customize to your needs.</label>
 		<label index="demodata.contains">Contains: Projects, Tasks, Addresses, Companies, Comments, Feedbacks, Roles, Worktypes, Filters and More.</label>
 		<label index="demodata.step">Import Demo Data</label>
-		<label index="finish.title">Installation Finished</label>
-		<label index="finish.text">Installation Finished</label>
+		<label index="finish.title">Finish Installation</label>
+		<label index="finish.text">Finish Installation</label>
 		<label index="finish.button">Disable Installer and Go to Login</label>
 		<label index="finish.step">Finish Installation</label>
 		<label index="update.title">todoyu Version Update</label>
