* installer cleanups * added administrator account form to installer (not yet processed)

--- a/install/locale/installer.xml
+++ b/install/locale/installer.xml
@@ -55,14 +55,17 @@
 		<label index="systemconfig.text">Select Your todoyu System Settings</label>
 		<label index="systemconfig.text.error">Please Enter a System Name and Email</label>
 		<label index="systemconfig.step">System Configuration</label>
-		<label index="adminpassword.title">Set Admin Password</label>
-		<label index="adminpassword.button">Set Admin Password</label>
+		<label index="adminpassword.title">Create Administrator Account</label>
+		<label index="adminpassword.button">Create Administrator Account</label>
+		<label index="adminpassword.companyname">Company Name</label>
+		<label index="adminpassword.adminfirstname">Administrator Firstname</label>
+		<label index="adminpassword.adminlastname">Administrator Lastname</label>
 		<label index="adminpassword.username">Username</label>
 		<label index="adminpassword.password">Password</label>
 		<label index="adminpassword.repeatPassword">Repeat Password</label>
 		<label index="adminpassword.passwordHint">at least 5 Characters</label>
-		<label index="adminpassword.text">Please Enter the new Admin Password Twice</label>
-		<label index="adminpassword.step">Set Admin Password</label>
+		<label index="adminpassword.text">Please enter the data for your administrator account</label>
+		<label index="adminpassword.step">Create Administrator Account</label>
 		<label index="demodata.title">Import Demo Data</label>
 		<label index="demodata.checkboxlabel">Import the Demo Data</label>
 		<label index="demodata.button">Next Step</label>
