* implemented administrator account input, validation and creation in installer (first-, lastname, email, companyname)

--- a/install/locale/installer.xml
+++ b/install/locale/installer.xml
@@ -55,23 +55,25 @@
 		<label index="systemconfig.text">Select Your todoyu System Settings</label>
 		<label index="systemconfig.text.error">Please Enter a System Name and Email</label>
 		<label index="systemconfig.step">System Configuration</label>
-		<label index="adminpassword.title">Create Administrator Account</label>
-		<label index="adminpassword.button">Create Administrator Account</label>
-		<label index="adminpassword.companyname">Company Name</label>
-		<label index="adminpassword.adminfirstname">Administrator Firstname</label>
-		<label index="adminpassword.adminlastname">Administrator Lastname</label>
-		<label index="adminpassword.username">Username</label>
-		<label index="adminpassword.password">Password</label>
-		<label index="adminpassword.repeatPassword">Repeat Password</label>
-		<label index="adminpassword.passwordHint">at least 5 Characters</label>
-		<label index="adminpassword.text">Please enter the data for your administrator account</label>
-		<label index="adminpassword.step">Create Administrator Account</label>
-		<label index="demodata.title">Import Demo Data</label>
-		<label index="demodata.checkboxlabel">Import the Demo Data</label>
-		<label index="demodata.button">Next Step</label>
-		<label index="demodata.text">You can import the demo data to start testing right after you logged in. Without the demo data, you have a clean installation which you can customize to your needs.</label>
-		<label index="demodata.contains">Contains: Projects, Tasks, Addresses, Companies, Comments, Feedbacks, Roles, Worktypes, Filters and More.</label>
-		<label index="demodata.step">Import Demo Data</label>
+		<label index="adminaccount.title">Create Administrator Account</label>
+		<label index="adminaccount.email">Administrator Email</label>
+		<label index="adminaccount.button">Create Administrator Account</label>
+		<label index="adminaccount.companyname">Company Name</label>
+		<label index="adminaccount.adminfirstname">Administrator Firstname</label>
+		<label index="adminaccount.adminlastname">Administrator Lastname</label>
+		<label index="adminaccount.username">Username</label>
+		<label index="adminaccount.password">Password</label>
+		<label index="adminaccount.repeatPassword">Repeat Password</label>
+		<label index="adminaccount.passwordHint">at least 5 Characters</label>
+		<label index="adminaccount.text">Please enter the data for your administrator account</label>
+		<label index="adminaccount.step">Create Administrator Account</label>
+		<label index="adminaccount.error">Please check the given account data</label>
+		<label index="importdemodata.title">Import Demo Data</label>
+		<label index="importdemodata.checkboxlabel">Import the Demo Data</label>
+		<label index="importdemodata.button">Next Step</label>
+		<label index="importdemodata.text">You can import the demo data to start testing right after you logged in. Without the demo data, you have a clean installation which you can customize to your needs.</label>
+		<label index="importdemodata.contains">Contains: Projects, Tasks, Addresses, Companies, Comments, Feedbacks, Roles, Worktypes, Filters and More.</label>
+		<label index="importdemodata.step">Import Demo Data</label>
 		<label index="finish.title">Finish Installation</label>
 		<label index="finish.text">Finish Installation</label>
 		<label index="finish.button">Disable Installer and Go to Login</label>
@@ -149,25 +151,26 @@
 		<label index="systemconfig.text">todoyu System-Einstellungen vornehmen</label>
 		<label index="systemconfig.text.error">Bitte System-Name und -Email angeben</label>
 		<label index="systemconfig.step">System konfigurieren</label>
-		<label index="adminpassword.title">Administratoren-Passwort ändern</label>
-		<label index="adminpassword.button">Administratoren-Passwort ändern</label>
-		<label index="adminpassword.username">Benutzername</label>
-		<label index="adminpassword.password">Passwort</label>
-		<label index="adminpassword.repeatPassword">Passwort wiederholen</label>
-		<label index="adminpassword.passwordHint">mindestestenz 5 Zeichen</label>
-		<label index="adminpassword.text">Bitte geben Sie das neue Administratorpasswort doppelt ein</label>
-		<label index="adminpassword.step">Administratoren-Passwort festlegen</label>
-		<label index="demodata.title">Beispieldaten importieren</label>
-		<label index="demodata.checkboxlabel">Importiere die Beispieldaten </label>
-		<label index="demodata.button">Weiter</label>
-		<label index="demodata.text">Um gleich nach dem Anmelden mit dem Testen zu beginnen, können Sie die Beispieldaten importieren. Ohne die Beispieldaten haben Sie eine saubere (jedoch leere) Installation, die Sie selbst mit Daten füllen können.</label>
-		<label index="demodata.contains">Enthalten sind: Projekte, Aufgaben, Adressen, Firmen, Kommentare, Feedbacks, Systemrollen, Leistungsarten, Filter und noch weitere Daten.</label>
-		<label index="demodata.step">Beispieldaten importieren</label>
+		<label index="adminaccount.title">Administratoren-Passwort ändern</label>
+		<label index="adminaccount.email">Administrator Email</label>
+		<label index="adminaccount.button">Administratoren-Passwort ändern</label>
+		<label index="adminaccount.username">Benutzername</label>
+		<label index="adminaccount.password">Passwort</label>
+		<label index="adminaccount.repeatPassword">Passwort wiederholen</label>
+		<label index="adminaccount.passwordHint">mindestestenz 5 Zeichen</label>
+		<label index="adminaccount.text">Bitte geben Sie das neue Administratorpasswort doppelt ein</label>
+		<label index="adminaccount.step">Administratoren-Passwort festlegen</label>
+		<label index="adminaccount.error">Bitte die Accountdaten prüfen</label>
+		<label index="importdemodata.title">Beispieldaten importieren</label>
+		<label index="importdemodata.checkboxlabel">Importiere die Beispieldaten </label>
+		<label index="importdemodata.button">Weiter</label>
+		<label index="importdemodata.text">Um gleich nach dem Anmelden mit dem Testen zu beginnen, können Sie die Beispieldaten importieren. Ohne die Beispieldaten haben Sie eine saubere (jedoch leere) Installation, die Sie selbst mit Daten füllen können.</label>
+		<label index="importdemodata.contains">Enthalten sind: Projekte, Aufgaben, Adressen, Firmen, Kommentare, Feedbacks, Systemrollen, Leistungsarten, Filter und noch weitere Daten.</label>
+		<label index="importdemodata.step">Beispieldaten importieren</label>
 		<label index="finish.title">Installation beendet</label>
 		<label index="finish.text">Installation beendet</label>
 		<label index="finish.button">Installer deaktivieren und weiter zum Login</label>
 		<label index="finish.step">Installation abschliessen</label>
-		<label index="finishupdate.step">Installation abschliessen</label>
 		<label index="update.title">todoyu Versions-Aktualisierung</label>
 		<label index="update.button">Aktualisierung starten</label>
 		<label index="update.info">Änderungen der Datenbank der vorliegenden Version durchführen und mit Datei-Konfiguration abgleichen</label>
@@ -182,6 +185,7 @@
 		<label index="updatetocurrentversion.changedColumns">Geänderte Spalten</label>
 		<label index="updatetocurrentversion.missingKeys">Fehlende Tabellen-Indexe</label>
 		<label index="updatetocurrentversion.step">Datenbankstruktur aktualisieren</label>
+		<label index="finishupdate.step">Installation abschliessen</label>
 		<label index="finishupdate.title">Aktualisieren beenden</label>
 		<label index="finishupdate.text">Der Installer hat Ihre todoyu Installation aktualisiert</label>
 	</labels>
