--- a/install/locale/installer.xml
+++ b/install/locale/installer.xml
@@ -4,12 +4,16 @@
 		<label index="panelWidget.title.progress">Steps of Installation</label>
 		<label index="type.install">todoyu Installation</label>
 		<label index="type.update">todoyu Update</label>
-		<label index="install.eula">End User License Agreement for todoyu</label>
-		<label index="install.lgpl">The Following Third Party Libraries are Licensed Under LGPL v2.1</label>
-		<label index="install.title">License Agreement</label>
-		<label index="install.button">I Accept, Install todoyu</label>
-		<label index="install.text">Welcome to the todoyu Tnstaller!</label>
-		<label index="install.step">todoyu Licence</label>
+		<label index="language.title">Select Installation Language</label>
+		<label index="language.selectthislanguage">Install todoyu in english</label><!-- name of the current locale language -->
+		<label index="language.text">Please choose the language used for the installation process:</label>
+		<label index="language.step">Select Installation Language</label>
+		<label index="license.eula">End User License Agreement for todoyu</label>
+		<label index="license.lgpl">The Following Third Party Libraries are Licensed Under LGPL v2.1</label>
+		<label index="license.title">License Agreement</label>
+		<label index="license.button">I Accept, Install todoyu</label>
+		<label index="license.text">Welcome to the todoyu Installer!</label>
+		<label index="license.step">todoyu Licence</label>
 		<label index="servercheck.title">Server Check</label>
 		<label index="servercheck.button">Setup Database Configuration</label>
 		<label index="servercheck.yourphpversion">Your Version</label>
@@ -100,12 +104,16 @@
 		<label index="panelWidget.title.progress">Installationsschritte</label>
 		<label index="type.install">todoyu Installation</label>
 		<label index="type.update">todoyu Aktualisierung</label>
-		<label index="install.eula">Benutzer-Vereinbarung für todoyu</label>
-		<label index="install.lgpl">Folgende Dritt-Bibliotheken sind unter LGPL v2.1 lizensiert</label>
-		<label index="install.title">todoyu Installer</label>
-		<label index="install.button">Ich stimme zu, todoyu jetzt installieren</label>
-		<label index="install.text">Willkommen zur Installation von todoyu!</label>
-		<label index="install.step">todoyu Benutzerlizenz</label>
+		<label index="language.title">Installationssprache Wählen</label>
+		<label index="language.selectthislanguage">toyou auf Deutsch installieren</label><!-- name of the current locale language -->
+		<label index="language.text">Bitte wählen Sie eine Sprache für den Installationsvorgang:</label>
+		<label index="language.step">Installationssprache Wählen</label>
+		<label index="license.eula">Benutzer-Vereinbarung für todoyu</label>
+		<label index="license.lgpl">Folgende Dritt-Bibliotheken sind unter LGPL v2.1 lizensiert</label>
+		<label index="license.title">todoyu Installer</label>
+		<label index="license.button">Ich stimme zu, todoyu jetzt installieren</label>
+		<label index="license.text">Willkommen zur Installation von todoyu!</label>
+		<label index="license.step">todoyu Benutzerlizenz</label>
 		<label index="servercheck.title">Server-Überprüfung</label>
 		<label index="servercheck.button">Datenbankkonfiguration vornehmen</label>
 		<label index="servercheck.yourphpversion">Ihre Version</label>
@@ -151,20 +159,23 @@
 		<label index="systemconfig.text">todoyu System-Einstellungen vornehmen</label>
 		<label index="systemconfig.text.error">Bitte System-Name und -Email angeben</label>
 		<label index="systemconfig.step">System konfigurieren</label>
-		<label index="adminaccount.title">Administratoren-Passwort ändern</label>
+		<label index="adminaccount.title">Administrator-Account Anlegen</label>
 		<label index="adminaccount.email">Administrator Email</label>
-		<label index="adminaccount.button">Administratoren-Passwort ändern</label>
+		<label index="adminaccount.button">Administratoren-Account Anlegen</label>
 		<label index="adminaccount.username">Benutzername</label>
 		<label index="adminaccount.password">Passwort</label>
 		<label index="adminaccount.repeatPassword">Passwort wiederholen</label>
 		<label index="adminaccount.passwordHint">mindestestenz 5 Zeichen</label>
-		<label index="adminaccount.text">Bitte geben Sie das neue Administratorpasswort doppelt ein</label>
-		<label index="adminaccount.step">Administratoren-Passwort festlegen</label>
+		<label index="adminaccount.text">Bitte geben Sie die Daten für Ihren Administrator-Account ein</label>
+		<label index="adminaccount.step">Administrator-Account Anlegen</label>
+		<label index="adminaccount.companyname">Firmenname</label>
+		<label index="adminaccount.adminfirstname">Administrator Vorname</label>
+		<label index="adminaccount.adminlastname">Administrator Nachname</label>
 		<label index="adminaccount.error">Bitte die Accountdaten prüfen</label>
 		<label index="importdemodata.title">Beispieldaten importieren</label>
 		<label index="importdemodata.checkboxlabel">Importiere die Beispieldaten </label>
 		<label index="importdemodata.button">Weiter</label>
-		<label index="importdemodata.text">Um gleich nach dem Anmelden mit dem Testen zu beginnen, können Sie die Beispieldaten importieren. Ohne die Beispieldaten haben Sie eine saubere (jedoch leere) Installation, die Sie selbst mit Daten füllen können.</label>
+		<label index="importdemodata.text">Um gleich nach dem Anmelden mit dem Testen zu beginnen, können Sie Beispieldaten importieren. Ohne die Beispieldaten haben Sie eine saubere (jedoch leere) Installation, die Sie selbst mit Daten füllen können.</label>
 		<label index="importdemodata.contains">Enthalten sind: Projekte, Aufgaben, Adressen, Firmen, Kommentare, Feedbacks, Systemrollen, Leistungsarten, Filter und noch weitere Daten.</label>
 		<label index="importdemodata.step">Beispieldaten importieren</label>
 		<label index="finish.title">Installation beendet</label>
